# ergodic-ts

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: getting-started.md  index.md
docs/api/: backtester.md  causal_dag.md  components.md  forecaster.md  harmonizer.md  reducer.md  server.md  snowflake_client.md  utils.md
docs/concepts/: causal-dag.md  components.md  harmonization.md  hierarchy.md  inference.md
docs/examples/: create_table.md  harmonizer.md  query_snowflake.md  reducer.md
docs/tutorials/: backtesting.md  custom-components.md  end-to-end.md
examples/: backtest_vms.py  backtest_vms_harmonized.py  backtester_poc.py  create_table.py  forecaster_poc.py  harmonizer_example.py  query_snowflake.py  reducer_example.py
old/: bass_individual_model_new.py  harmonization.py  individual_model.py
src/ergodicts/: __init__.py  backtester.py  causal_dag.py  components.py  forecaster.py  harmonizer.py  reducer.py  server.py  snowflake_client.py  utils.py
src/ergodicts/anchor/: __init__.py
src/ergodicts/static/: index.html
tests/: test_backtester.py  test_causal_dag.py  test_components.py  test_forecaster.py  test_reducer.py  test_server.py  test_utils.py
