[project]
name = "ergodicts"
version = "0.1.0"
description = "Ergodic TS — tools for time-series forecasting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "snowflake-connector-python[pandas]",
    "python-dotenv",
    "pydantic>=2.0",
    "graphviz",
    "numpyro>=0.15",
    "jax>=0.4",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "matplotlib>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ergodicts"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=8.0",
    "httpx>=0.27",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]
